--- a/main.css
+++ b/main.css
@@ -10,4 +10,10 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-.red {color: ;}
+.red    {color: #f00;}
+.orange {color: #f00;}
+.blue   {color: #f00;}
+.indigo {color: #f00;}
+.yellow {color: #f00;}
+.green  {color: #f00;}
+.violet {color: #f00;}
