Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ div {
 }
 
 .red    {color: #f00;}
-.orange {color: #f00;}
+.orange {color: #ffa500;}
 .blue   {color: #f00;}
 .indigo {color: #f00;}
 .yellow {color: #f00;}
