Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -14,6 +14,6 @@ div {
 .orange {color: #ffa500;}
 .blue   {color: #f00;}
 .indigo {color: #f00;}
-.yellow {color: #f00;}
+.yellow {color: #ff0;}
 .green  {color: #f00;}
 .violet {color: #f00;}
