Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ div {
 
 .red    {color: #f00;}
 .orange {color: #ffa500;}
-.blue   {color: #f00;}
+.blue   {color: #06f;}
 .indigo {color: #f00;}
 .yellow {color: #ff0;}
 .green  {color: #00bc3f;}
