--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ div {
 .red    {color: #f00;}
 .orange {color: #ffa500;}
 .blue   {color: #06f;}
-.indigo {color: #f00;}
+.indigo {color: #8a2be2;}
 .yellow {color: #ff0;}
 .green  {color: #00bc3f;}
 .violet {color: #f00;}
