--- a/main.css
+++ b/main.css
@@ -10,10 +10,10 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-.red    {color: #f00;}
-.orange {color: #ffa500;}
-.blue   {color: #06f;}
-.indigo {color: #8a2be2;}
-.yellow {color: #ff0;}
-.green  {color: #00bc3f;}
-.violet {color: #d300c9;}
+.red    {border-top-color: #f00;}
+.orange {border-top-color: #ffa500;}
+.blue   {border-top-color: #06f;}
+.indigo {border-top-color: #8a2be2;}
+.yellow {border-top-color: #ff0;}
+.green  {border-top-color: #00bc3f;}
+.violet {border-top-color: #d300c9;}
